src/test_compilateur/tst/ok/length__post_add.c
int main() {
  int a=5;
  int length=0;
  while(a!=0){
    length++;
    a--;
  }
}
